feat: update package to fit "standard" project format
Signed-off-by: Vassilis Vassiliadis <vassilis.vassiliadis@ibm.com>

--- a/nanopore-geometry-experiment.package/conf/flowir_package.yaml
+++ b/nanopore-geometry-experiment.package/conf/flowir_package.yaml
@@ -95,12 +95,12 @@ interface:
 variables:
   default:
     global:
-      numberOfNanopores: 3
       probeRadius_A: 1.4
       zeo_memory: '2Gi'
-  docker:
-    global:
       numberOfNanopores: 1
+  openshift:
+    global:
+      numberOfNanopores: 3
 
 blueprint:
   openshift:
@@ -109,7 +109,7 @@ blueprint:
         config:
           walltime: 14400.0
           backend: kubernetes
-  docker:
+  default:
     global:
       resourceManager:
         config:
@@ -266,6 +266,7 @@ output:
 
 platforms:
   - openshift
-  - docker
+  - docker # inherits everything from "default" platform
+  - default
 
 version: 1.0.0
